[package]
name = "provisioner-operator"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Matias Ezequiel Vara Larsen <mvaralar@redhat.com>"]

[dependencies]
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
futures = "0.3"
schemars = "0.8"
anyhow = "1"
http = "1"

[features]
default = ["tdx"]
tdx = []
sev = []
